--- a/Strategic_projects.html
+++ b/Strategic_projects.html
@@ -43,81 +43,80 @@
   </style>
  </head>
  <body class="bg-gray-900 text-gray-100">
-  <header class="sticky top-0 z-50 bg-gray-900 shadow-lg">
-   <nav class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-    <a class="flex items-center space-x-3" href="#">
-     <img alt="IntelliQuChain logo, stylized letters IQC in green and black" class="w-12 h-12 rounded-full pulseScale" src="https://placehold.co/48x48/4ade80/000000?text=IQC"/>
-     <span class="text-2xl font-extrabold tracking-wide text-green-400">
+  <header class="w-full bg-gradient-to-r from-indigo-800 via-purple-700 to-pink-700 shadow-lg sticky top-0 z-50">
+   <nav class="container mx-auto px-6 py-4 flex flex-wrap items-center justify-between">
+    <a class="text-3xl font-extrabold tracking-wide text-white flex items-center space-x-2 animate-pulse" href="#">
+     <img alt="IntelliQuChain logo, stylized letters IQC in purple gradient on white background" class="rounded-full" src="https://placehold.co/40x40/7c3aed/ffffff?text=IQC"/>
+     <span>
       IntelliQuChain
      </span>
     </a>
-    <ul class="hidden md:flex space-x-8 font-semibold text-gray-300">
-     <li>
-      <a class="hover:text-green-400 transition" href="#ecosystem">
-       Ecosystem
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#projects">
-       Projects
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#nfts">
-       NFTs
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#defi">
-       DeFi
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#trading">
-       Trading
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#profit">
-       Profit
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-green-400 transition" href="#contact">
-       Contact
-      </a>
-     </li>
-    </ul>
-    <button aria-label="Toggle menu" class="md:hidden text-gray-300 focus:outline-none focus:ring-2 focus:ring-green-400" id="menu-btn">
+    <input class="hidden" id="menu-toggle" type="checkbox"/>
+    <label class="cursor-pointer md:hidden block text-white" for="menu-toggle">
      <i class="fas fa-bars fa-lg">
      </i>
-    </button>
+    </label>
+    <ul class="hidden md:flex md:items-center md:space-x-8 w-full md:w-auto mt-4 md:mt-0 text-lg font-semibold" id="menu">
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/index.html">
+       Project Overview
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Innovations.html">
+       Innovations
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Marketing.html">
+       Marketing
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Premiun_Function.html">
+       Premium Features
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/project-files.html">
+       Project Files
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Strategic_projects.html">
+       Strategic Plans
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Collaborations.html">
+       Collaboration
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/my-efforts.html">
+       My Efforts
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+    </ul>
    </nav>
-   <div class="hidden md:hidden bg-gray-800 px-6 py-4 space-y-4 font-semibold text-gray-300" id="mobile-menu">
-    <a class="block hover:text-green-400 transition" href="#ecosystem">
-     Ecosystem
-    </a>
-    <a class="block hover:text-green-400 transition" href="#projects">
-     Projects
-    </a>
-    <a class="block hover:text-green-400 transition" href="#nfts">
-     NFTs
-    </a>
-    <a class="block hover:text-green-400 transition" href="#defi">
-     DeFi
-    </a>
-    <a class="block hover:text-green-400 transition" href="#trading">
-     Trading
-    </a>
-    <a class="block hover:text-green-400 transition" href="#profit">
-     Profit
-    </a>
-    <a class="block hover:text-green-400 transition" href="#contact">
-     Contact
-    </a>
-   </div>
   </header>
-  <main class="max-w-7xl mx-auto px-6 py-12">
+  <main class="flex-grow container mx-auto px-6 py-12 space-y-24">
    <section class="text-center mb-20">
     <h1 class="text-5xl md:text-6xl font-extrabold text-green-400 leading-tight fadeInUp">
      IntelliQuChain
@@ -426,3 +425,4 @@
   </script>
  </body>
 </html>
+
