--- a/Premiun_Function.html
+++ b/Premiun_Function.html
@@ -45,103 +45,80 @@
  </head>
  <body class="bg-gray-50 text-gray-900 selection:bg-indigo-500 selection:text-white">
   <!-- Navbar -->
-  <nav class="fixed w-full bg-white shadow-md z-50">
-   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-    <a class="text-2xl font-bold text-indigo-600 hover:text-indigo-700" href="#introduction">
-     IntelliQuChain
+  <header class="w-full bg-gradient-to-r from-indigo-800 via-purple-700 to-pink-700 shadow-lg sticky top-0 z-50">
+   <nav class="container mx-auto px-6 py-4 flex flex-wrap items-center justify-between">
+    <a class="text-3xl font-extrabold tracking-wide text-white flex items-center space-x-2 animate-pulse" href="#">
+     <img alt="IntelliQuChain logo, stylized letters IQC in purple gradient on white background" class="rounded-full" src="https://placehold.co/40x40/7c3aed/ffffff?text=IQC"/>
+     <span>
+      IntelliQuChain
+     </span>
     </a>
-    <ul class="hidden md:flex space-x-8 font-medium text-gray-700">
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#introduction">
-       Introduction
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#ai-functions">
-       AI &amp; Functions
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#trading-sector">
-       Trading Sector
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#nft-functions">
-       NFT Functions
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#defi-integration">
-       DeFi Integration
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#monetization">
-       Monetization
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#satellite-integration">
-       Satellite Integration
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-600 transition" href="#revolutionizing">
-       Revolutionizing
-      </a>
-     </li>
-    </ul>
-    <button class="md:hidden focus:outline-none" id="menu-btn">
-     <i class="fas fa-bars text-2xl text-indigo-600">
+    <input class="hidden" id="menu-toggle" type="checkbox"/>
+    <label class="cursor-pointer md:hidden block text-white" for="menu-toggle">
+     <i class="fas fa-bars fa-lg">
      </i>
-    </button>
-   </div>
-   <div class="hidden md:hidden bg-white shadow-inner" id="mobile-menu">
-    <ul class="flex flex-col space-y-4 p-6 font-medium text-gray-700">
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#introduction">
-       Introduction
+    </label>
+    <ul class="hidden md:flex md:items-center md:space-x-8 w-full md:w-auto mt-4 md:mt-0 text-lg font-semibold" id="menu">
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/index.html">
+       Project Overview
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#ai-functions">
-       AI &amp; Functions
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Innovations.html">
+       Innovations
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#trading-sector">
-       Trading Sector
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Marketing.html">
+       Marketing
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#nft-functions">
-       NFT Functions
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Premiun_Function.html">
+       Premium Features
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#defi-integration">
-       DeFi Integration
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/project-files.html">
+       Project Files
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#monetization">
-       Monetization
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Strategic_projects.html">
+       Strategic Plans
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#satellite-integration">
-       Satellite Integration
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Collaborations.html">
+       Collaboration
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-600 transition block" href="#revolutionizing">
-       Revolutionizing
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/my-efforts.html">
+       My Efforts
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
     </ul>
-   </div>
-  </nav>
+   </nav>
+  </header>
+  <main class="flex-grow container mx-auto px-6 py-12 space-y-24">
   <!-- Hero Section -->
   <header class="pt-24 bg-gradient-to-r from-indigo-600 via-purple-700 to-pink-600 text-white">
    <div class="max-w-7xl mx-auto px-6 py-20 flex flex-col md:flex-row items-center justify-between gap-12">
@@ -434,3 +411,4 @@
   </script>
  </body>
 </html>
+
