--- a/Innovations.html
+++ b/Innovations.html
@@ -51,64 +51,80 @@
   </style>
  </head>
  <body class="bg-gray-900 text-gray-100 leading-relaxed scroll-smooth">
-  <header class="fixed w-full bg-gray-900 bg-opacity-90 backdrop-blur-md z-50 shadow-lg">
-   <nav class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-    <a class="text-3xl font-extrabold text-indigo-400 hover:text-indigo-500 transition" href="#introduction">
-     IntelliQuChain
+  <header class="w-full bg-gradient-to-r from-indigo-800 via-purple-700 to-pink-700 shadow-lg sticky top-0 z-50">
+   <nav class="container mx-auto px-6 py-4 flex flex-wrap items-center justify-between">
+    <a class="text-3xl font-extrabold tracking-wide text-white flex items-center space-x-2 animate-pulse" href="#">
+     <img alt="IntelliQuChain logo, stylized letters IQC in purple gradient on white background" class="rounded-full" src="https://placehold.co/40x40/7c3aed/ffffff?text=IQC"/>
+     <span>
+      IntelliQuChain
+     </span>
     </a>
-    <ul class="hidden md:flex space-x-8 font-semibold text-gray-300">
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#introduction">
-       Introduction
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#nfts-marketplace">
-       NFTs Marketplace
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#ai">
-       AI
-      </a>
-     </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#technology-integration">
-       Technology Integration
-      </a>
-     </li>
-    </ul>
-    <button class="md:hidden text-gray-300 focus:outline-none" id="menu-btn">
+    <input class="hidden" id="menu-toggle" type="checkbox"/>
+    <label class="cursor-pointer md:hidden block text-white" for="menu-toggle">
      <i class="fas fa-bars fa-lg">
      </i>
-    </button>
-   </nav>
-   <div class="hidden md:hidden bg-gray-800 bg-opacity-95" id="mobile-menu">
-    <ul class="flex flex-col space-y-4 p-6 text-gray-300 font-semibold">
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#introduction">
-       Introduction
+    </label>
+    <ul class="hidden md:flex md:items-center md:space-x-8 w-full md:w-auto mt-4 md:mt-0 text-lg font-semibold" id="menu">
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/index.html">
+       Project Overview
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#nfts-marketplace">
-       NFTs Marketplace
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Innovations.html">
+       Innovations
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#ai">
-       AI
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Marketing.html">
+       Marketing
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
-     <li>
-      <a class="hover:text-indigo-400 transition" href="#technology-integration">
-       Technology Integration
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Premiun_Function.html">
+       Premium Features
       </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/project-files.html">
+       Project Files
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Strategic_projects.html">
+       Strategic Plans
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Collaborations.html">
+       Collaboration
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
+     </li>
+     <li class="group relative">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/my-efforts.html">
+       My Efforts
+      </a>
+      <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
+      </span>
      </li>
     </ul>
-   </div>
+   </nav>
   </header>
-  <main class="pt-24 max-w-7xl mx-auto px-6 space-y-24">
+  <main class="flex-grow container mx-auto px-6 py-12 space-y-24">
    <!-- Introduction -->
    <section class="fadeInUp reveal max-w-5xl mx-auto" id="introduction">
     <div class="flex flex-col md:flex-row items-center md:space-x-12">
@@ -456,3 +472,4 @@
   </script>
  </body>
 </html>
+
