--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
     </label>
     <ul class="hidden md:flex md:items-center md:space-x-8 w-full md:w-auto mt-4 md:mt-0 text-lg font-semibold" id="menu">
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.index.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="index.html">
        Project Overview
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.Innovations.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Innovations.html">
        Innovations
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
@@ -612,5 +612,6 @@
   </script>
  </body>
 </html>
+
 
 
