--- a/index.html
+++ b/index.html
@@ -107,42 +107,42 @@
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.Marketing.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Marketing.html">
        Marketing
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.Premiun_Function.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Premiun_Function.html">
        Premium Features
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.project-files.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="project-files.html">
        Project Files
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.Strategic_projects.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Strategic_projects.html">
        Strategic Plans
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.Collaborations.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Collaborations.html">
        Collaboration
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/.my-efforts.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="my-efforts.html">
        My Efforts
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
@@ -612,6 +612,7 @@
   </script>
  </body>
 </html>
+
 
 
 
