--- a/Collaborations.html
+++ b/Collaborations.html
@@ -67,56 +67,56 @@
     </label>
     <ul class="hidden md:flex md:items-center md:space-x-8 w-full md:w-auto mt-4 md:mt-0 text-lg font-semibold" id="menu">
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/index.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="index.html">
        Project Overview
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Innovations.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Innovations.html">
        Innovations
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Marketing.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Marketing.html">
        Marketing
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Premiun_Function.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Premiun_Function.html">
        Premium Features
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/project-files.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="project-files.html">
        Project Files
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Strategic_projects.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Strategic_projects.html">
        Strategic Plans
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/Collaborations.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="Collaborations.html">
        Collaboration
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
       </span>
      </li>
      <li class="group relative">
-      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="/my-efforts.html">
+      <a class="hover:text-pink-400 transition duration-300 ease-in-out" href="my-efforts.html">
        My Efforts
       </a>
       <span class="absolute -bottom-1 left-0 w-0 group-hover:w-full h-0.5 bg-pink-400 transition-all duration-300">
@@ -533,4 +533,5 @@
   </script>
  </body>
 </html>
+
 
